Reference diasp0raca Twitter account on 500 page.

--- a/public/500.html
+++ b/public/500.html
@@ -58,10 +58,11 @@
   </header>
 
   <h1>
-    500: Internal server error.
+    Internal server error.
   </h1>
   <h3>
-    Our bad!  Want to tell us how you got here?
+    Check <a href="http://twitter.com/#!/diasp0raca">our Twitter account</a> for information
+    about downtime or other major problems.
   </h3>
 
   <div id="satisfaction">
