--- a/public/500.html
+++ b/public/500.html
@@ -4,66 +4,44 @@
   <title>We're sorry, but something went wrong (500)</title>
   <style type="text/css">
     body {
-      text-align: center;
-      background-color: rgb(252,252,252);
-      color: #444;
-      font-family: 'helvetica neue', 'helvetica', 'arial', sans-serif;
-      margin: 0;
-      padding: 1em;
-    }
+			text-align: center;
+			background-color: rgb(252,252,252);
+			color: #444;
+			font-family: 'helvetica neue', 'helvetica', 'arial', sans-serif;
+			margin: 0; 
+			padding: 1em;
+		}
 
     header {
-      height: 100px;
-      background-color: #333;
-      position:relative;
-    }
+			height: 100px;
+			background-color: #333;
+			position:relative;
+		}
 
-    #diaspora_logo {
-      position: relative;
-      margin-top: 50px;
-    }
+		#diaspora_logo {
+			position: relative;
+			margin-top: 50px;
+		}
 
     h1 {
-      font-size: 100%;
-      color: #444;
-      line-height: 1.5em;
-    }
-
-    #satisfaction {
-      display:inline-block;
-      width: 800px;
-      margin-top: 50px;
-      background-color: #fff;
-
-      position: relative;
-      padding: 12px;
-      background-color: white;
-      -webkit-box-shadow: 0 1px 3px #333333;
-      -moz-box-shadow: 0 1px 3px #333333;
-      -webkit-border-radius: 2px;
-      -moz-border-radius: 2px;
-      border-radius: 2px;
-      border-bottom: 1px solid #cccccc;
-      border-top: 1px solid white;
-
-      max-height: 300px;
-    }
-  </style>
+			font-size: 100%;
+			color: #444;
+			line-height: 1.5em;
+		}
+	</style>
 </head>
 
 <body>
   <!-- This file lives in public/500.html -->
   <header>
-    <img id="diaspora_logo" src="/images/logo_large.png"/>
+		<img id="diaspora_logo" src="/assets/branding/logo_large.png"/>
   </header>
 
-  <h1>
-    Internal server error.
-  </h1>
-  <h3>
-    Check <a href="http://twitter.com/#!/diasp0raca">our Twitter account</a> for information
-    about downtime or other major problems.
-  </h3>
-
+	<h1>
+		500: Internal server error.
+	</h1>
+	<h3>
+		Our bad! Sorry about that. :(
+	</h3>
 </body>
 </html>
